--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,10 @@
     <string name="time">5:34</string>
     <string name="time_1">0:00</string>
     <string name="time_2">0:00</string>
+    <string name="favourite">" Favourite List"</string>
+    <string name="listnow">List Now</string>
+    <string name="recents">Recents</string>
+    <string name="music_library">Music Library</string>
+    <string name="setting">Settings</string>
+    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
 </resources>
